# wezterm-chat-mcp

./: README.md  pyproject.toml  server.py
